--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-phone-number-input": "^3.2.13",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "styled-components": "^5.3.6",
